--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 </head>
 <body>
     <div class="container">
-       <img src="logo.jpg" alt="logo">
+       <img src="logo.jpg" alt="logo" width: 50%;
+  height: auto;>
         <h1>3D Bobby Lee</h1>
         <p>changeme</p>
 
