--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 </head>
 <body>
     <div class="container">
-       <img src="logo.jpg" alt="logo" width: 10%;
-  height: auto;>
+       <img src="logo.jpg" alt="logo" width: 10% height: auto;>
         <h1>3D Bobby Lee</h1>
         <p>changeme</p>
 
