--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="container">
-       <img src="logo.jpg" alt="logo" width: 10% height: auto;>
+       <centre><img src="logo.jpg" alt="logo" width: 10% height: auto;></center>
         <h1>3D Bobby Lee</h1>
         <p>changeme</p>
 
