--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
        <centre><img src="logo.jpg" alt="logo" width: 10% height: auto;></center>
         <h1>3D Bobby Lee</h1>
-        <p>changeme</p>
+        <p>Hi, Im Bobby, I am 12 years old and I am making 3D printed items for pocket money prices. I am a LICENSED seller of Cinderwings, Eternitylabs and 3Dcutes</p>
 
         <hr>
 
