--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
         <p><strong>Step 3: Get a Price</strong></p>
         <p>I'll give you a quote based on the size of the print and the colour you want.</p>
+           <img src="img2.jpg" alt="logo" width: 25% height: auto;>
 
         <div class="note">
             <p><strong>Important Note:</strong> A 10% deposit is required for any print that is un-resellable (like a name or specific logo). This makes sure I don't lose money on wasted filament if the print isn't picked up.</p>
