--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
         <h2>How to Order</h2>
         <p>Contact me on '3D Bobby Lee' on Facebook to place an order!</p>
+            <a href="info.html">Other info</a> 
     </div>
 </body>
 </html>
