--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
             <li><strong>Standard Colours (name_here & name_here)</strong></li>
             <li><strong>Premium Colour (name_here)</li>
         </ul>
+           
+
+img
+{
+    max-width: 100%;
+    min-width: 300px;
+    height: auto;
+}
+
+
 
         <p><strong>Step 3: Get a Price</strong></p>
         <p>I'll give you a quote based on the size of the print and the colour you want.</p>
