--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ img
 
         <p><strong>Step 3: Get a Price</strong></p>
         <p>I'll give you a quote based on the size of the print and the colour you want.</p>
-           <img class="img-responsive" src="img2.jpg" alt="logo" height: auto;>
+           <img class="img-responsive" src="img2.jpg" alt="logo">
 
         <div class="note">
             <p><strong>Important Note:</strong> A 10% deposit is required for any print that is un-resellable (like a name or specific logo). This makes sure I don't lose money on wasted filament if the print isn't picked up.</p>
