--- a/index.html
+++ b/index.html
@@ -80,18 +80,11 @@
         </ul>
            
 
-img
-{
-    max-width: 100%;
-    min-width: 170px;
-    height: auto;
-}
-
-
-
         <p><strong>Step 3: Get a Price</strong></p>
         <p>I'll give you a quote based on the size of the print and the colour you want.</p>
-           <img class="img-responsive" src="img2.jpg" alt="logo">
+           <img class="img-responsive" src="img2.jpg" alt="logo" max-width: 100%;
+    min-width: 170px;
+    height: auto;>
 
         <div class="note">
             <p><strong>Important Note:</strong> A 10% deposit is required for any print that is un-resellable (like a name or specific logo). This makes sure I don't lose money on wasted filament if the print isn't picked up.</p>
