--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    .responsive {
+  width: 100%;
+  height: auto;
+}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,9 +86,7 @@
 
         <p><strong>Step 3: Get a Price</strong></p>
         <p>I'll give you a quote based on the size of the print and the colour you want.</p>
-           <img class="img-responsive" src="img2.jpg" alt="logo" max-width: 100%;
-    min-width: 170px;
-    height: auto;>
+            <img src="img2.jpg" alt="img" class="responsive"> 
 
         <div class="note">
             <p><strong>Important Note:</strong> A 10% deposit is required for any print that is un-resellable (like a name or specific logo). This makes sure I don't lose money on wasted filament if the print isn't picked up.</p>
