--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>This page is under rennovation.</h1>
+<h1>This page is under renovation.</h1>
 <p>Check back later.</p>
   <a href="index.html">Go Back</a> 
 
