--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <img src="img2.jpg" alt="img" class="responsive"> 
 
         <div class="note">
-            <p><strong>Important Note:</strong> A 10% deposit is required for any print that is un-resellable (like a name or specific logo). This makes sure I don't lose money on wasted filament if the print isn't picked up.</p>
+            <p><strong>Important Note:</strong> A 10% deposit is required for any print that is personalized (like a name or specific logo). This makes sure I don't lose money on wasted filament if the print isn't picked up.</p>
         </div>
         
         <hr>
