--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
         <p><em>These are ready-to-go designs. </em></p>
         <ul>
             <li>
-                <strong>item1</strong> - description here<br>
-                Price: <strong>pricehere</strong>
+                <strong>Crystal Dragon</strong> - Fully Articulated Crystal Dragon<br>
+                Price: <strong>£15.00</strong>
             </li>
             <li>
-                <strong>item2</strong> - description here<br>
-                Price: <strong>pricehere</strong>
+                <strong>Python</strong> - Fully Articulated Python<br>
+                Price: <strong>£13.00</strong>
             </li>
             <li>
-                <strong>item3</strong> - descriptionhere
-                 <br/>Price: <strong>pricehere</strong>
+              <img src="dagon.jpg" alt="img" class="responsive">
             </li>
         </ul>
 
@@ -79,8 +78,7 @@
 
         <p><strong>Step 2: Choose Your Colour</strong></p>
         <ul>
-            <li><strong>Standard Colours (name_here & name_here)</strong></li>
-            <li><strong>Premium Colour (name_here)</li>
+            <li><strong>A wide variety of colours - message me for details</strong></li>
         </ul>
            
 
