--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <hr>
 
         <h2>Popular Prints</h2>
-        <p><em>These are ready-to-go designs. </em></p>
+        <p><em>These are some of my popular design. </em></p>
         <ul>
             <li>
                 <strong>Crystal Dragon</strong> - Fully Articulated Crystal Dragon<br>
