--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <li>
                 <strong>Crystal Dragon</strong> - Fully Articulated Crystal Dragon<br>
                 Price: <strong>£15.00</strong>
+                  <img src="dagon1.jpg" alt="img" class="responsive">
             </li>
             <li>
                 <strong>Python</strong> - Fully Articulated Python<br>
