--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <hr>
 
         <h2>How to Order</h2>
-        <p>Contact me on '3D Bobby Lee' on Facebook to place an order!</p>
+        <p>Contact me at '3D Bobby Lee' on Facebook to place an order!</p>
             <a href="info.html">Other info</a> 
     </div>
 </body>
