--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <h2>How to Order</h2>
         <p>Contact me at '3D Bobby Lee' on Facebook to place an order!</p>
-            <a href="info.html">Other info</a> 
+            <a href="prod.html">Other info</a> 
     </div>
 </body>
 </html>
