--- a/prod.html
+++ b/prod.html
@@ -57,12 +57,12 @@
        <br>
         <strong>Articulated Triceratops</strong> - A fully articlated triceratops model/fidget/toy. Even has a moving jaw!<br>
                 Price: <strong>£10.00</strong>    
-    <img src="dino.jpg" alt="img" class="responsive">
+    <img src="/img/dino.jpg" alt="img" class="responsive">
        <br>
     <strong>Feelings Fob</strong> - These are good for people with autism and adhd who struggle to express their feelings.<br>
                 Price: <strong>£3.00</strong> (a set)
            
-    <img src="Ffob.jpg" alt="img" class="responsive">
+    <img src="/img/Ffob.jpg" alt="img" class="responsive">
 
            
 
