--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <hr>
 
         <h2>Popular Prints</h2>
-        <p><em>These are some of my popular designs. </em></p>
+        <p><em>These are some of my popular designs. (more at bottom of page) </em></p>
         <ul>
             <li>
                 <strong>Crystal Dragon</strong> - Fully Articulated Crystal Dragon<br>
@@ -95,7 +95,7 @@
 
         <h2>How to Order</h2>
         <p>Contact me at '3D Bobby Lee' on Facebook to place an order!</p>
-            <a href="prod.html">Other info</a> 
+            <a href="prod.html">My products</a> 
     </div>
 </body>
 </html>
